# todo-axum-sqlx

./: .gitignore  Cargo.toml  README.md
migrations/: 20231125113937_todos.up.sql
src/: main.rs  routes.rs
src/api/todos/: mod.rs  todo_models.rs  todos_handler.rs  todos_routes.rs
src/api/v1/todos/: mod.rs  todos_handler.rs  todos_routes.rs
