[package]
name = "todo_axum_sqlx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.2", features = ["postgres", "runtime-tokio", "uuid", "chrono"] }
tokio = { version = "1.34.0", features = ["full"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
